01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlr-prd-fe-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlr-prd-be-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlr-prd-db-ns
