04-sts-rds.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlr-dev-rds-sts
  namespace: mlr-dev-rds-ns
spec:
  serviceName: mlr-dev-rds-svc
  replicas: 3
  selector:
    matchLabels:
      app: mlr-dev-rds-sts
  template:
    metadata:
      labels:
        app: mlr-dev-rds-sts
    spec:
      containers:
      - name: redis
        image: 192.168.56.200/mylittlerecipebook/redis:7.0-alpine
        imagePullPolicy: Always
        command:
          - redis-server
          - /mnt/config/redis.conf
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /mnt/config
      volumes:
      - name: config
        emptyDir: {}
