05-dpl-rds-snt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-rds-dpl-snt
  namespace: mlr-dev-rds-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mlr-dev-rds-dpl-snt
  template:
    metadata:
      labels:
        app: mlr-dev-rds-dpl-snt
    spec:
      containers:
      - name: sentinel
        image: 192.168.56.200/mylittlerecipebook/redis:7.0-alpine
        imagePullPolicy: Always
        command:
          - redis-server
          - /mnt/sentinel/sentinel.conf
          - --sentinel
        ports:
        - containerPort: 26379
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - name: sentinel-config
          mountPath: /mnt/sentinel
      volumes:
      - name: config
        configMap:
          name: mlr-dev-rds-cm-snt
      - name: sentinel-config
        emptyDir: {}
