be_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-be-dpl
  namespace: mlr-dev-be-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backendnode
  template:
    metadata:
      labels:
        app: backendnode
    spec:
      containers:
      - name: backend
        image: 192.168.56.200/mylittlerecipebook/mlr-dev-be-img:6
        ports:
        - containerPort: 3000
