be_fap_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-prd-be-dpl-fap
  namespace: mlr-prd-be-ns
spec:
  selector:
    matchLabels:
      app: backend
      tier: fast
  template:
    metadata:
      labels:
        app: backend
        tier: fast
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: mlr-prd-eks-app-ng
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: tier
                    operator: In
                    values:
                      - fast
              topologyKey: kubernetes.io/hostname
      containers:
        - name: backend
          image: 761278642645.dkr.ecr.ap-northeast-2.amazonaws.com/mylittlerecipebook/mlr-prd-be-img-fap:12
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
