be_nod_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-be-dpl-nod
  namespace: mlr-dev-be-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 192.168.56.200/mylittlerecipebook/mlr-dev-be-img-nod:17
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
