be_ocr_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-prd-be-dpl-ocr
  namespace: mlr-prd-be-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
      tier: ocr
  template:
    metadata:
      labels:
        app: backend
        tier: ocr
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: mlr-prd-eks-ocr-ng
      containers:
        - name: ocr-backend
          image: 761278642645.dkr.ecr.ap-northeast-2.amazonaws.com/mylittlerecipebook/mlr-prd-be-img-ocr:5
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
