db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlr-dev-db-sts
  namespace: mlr-dev-db-ns
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mlr-dev-db-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: 192.168.56.200/mylittlerecipebook/mlr-dev-db-img-msq:1
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1
            memory: 2Gi
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mlr-dev-db-pvc
