deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-dpl
  namespace: mlr-dev-fe-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-dpl
  template:
    metadata:
      labels:
        app: test-dpl
    spec:
      imagePullSecrets:
        - name: mlr-dev-fe-hbr-sec
      containers:
        - name: test-pod
          image: 192.168.56.200/mylittlerecipebook/mlr-dev-fe-img:9
          ports:
            - containerPort: 80
