fe_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlr-dev-fe-dpl
  namespace: mlr-dev-fe-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 192.168.56.200/mylittlerecipebook/mlr-dev-fe-img:24
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
