03-svc-rds.yaml

apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-rds-svc
  namespace: mlr-prd-rds-ns
spec:
  clusterIP: None
  selector:
    app: mlr-prd-rds-sts
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-rds-svc-snt
  namespace: mlr-prd-rds-ns
spec:
  ports:
  - port: 26379
    targetPort: 26379
  selector:
    app: mlr-prd-rds-dpl-snt
