09-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-fe-svc
  namespace: mlr-prd-fe-ns
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-be-svc-nod
  namespace: mlr-prd-be-ns
spec:
  selector:
    app: backend
    tier: node
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-be-svc-fap
  namespace: mlr-prd-be-ns
spec:
  selector:
    app: backend
    tier: fast
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-db-svc
  namespace: mlr-prd-db-ns
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mlr-prd-db-svc-fst
  namespace: mlr-prd-db-ns
spec:
  selector:
    statefulset.kubernetes.io/pod-name: mlr-prd-db-sts-0
  type: NodePort
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
    nodePort: 32301
