08-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlr-prd-fe-ing
  namespace: mlr-prd-fe-ns
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:761278642645:certificate/4cc6737b-d6a2-46c0-a448-e52ae2886b79"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: book.mylittle.recipes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlr-prd-fe-svc
            port:
              number: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlr-prd-be-ing
  namespace: mlr-prd-be-ns
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: book.mylittle.recipes
    http:
      paths:
      - path: /back
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlr-prd-be-svc-nod
            port:
              number: 3000
